--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dungeon-delight-dash</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Dungeon Delight Dash</title>
+    <meta name="description" content="A dungeon crawling team management game." />
+    <link rel="icon" type="image/webp" href="/tots_icon.webp" />
 
-    <meta property="og:title" content="dungeon-delight-dash" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Dungeon Delight Dash" />
+    <meta property="og:description" content="A dungeon crawling team management game." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
