--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dungeon Delight Dash</title>
+    <title>Trials of the Shadow Sovereign</title>
     <meta name="description" content="A dungeon crawling team management game." />
     <link rel="icon" type="image/webp" href="/tots_icon.webp" />
 
-    <meta property="og:title" content="Dungeon Delight Dash" />
+    <meta property="og:title" content="Trials of the Shadow Sovereign" />
     <meta property="og:description" content="A dungeon crawling team management game." />
     <meta property="og:type" content="website" />
 
